tests/pos/SqrtPosTest.hs
module SqrtPosTest where

test :: Floating a => a
test = sqrt 2
