tests/neg/sqrt.hs
module SqrtNegTest where

test :: Floating a => a
test = sqrt (-3)
